--- a/moo/mooutils/Makefile.incl
+++ b/moo/mooutils/Makefile.incl
@@ -200,7 +200,7 @@ stock-moo.h: $(PIXMAPS)
 		MOO_DETACH_ICON $(moo_srcdir)/mooutils/pixmaps/detach.png \
 		MOO_ATTACH_ICON $(moo_srcdir)/mooutils/pixmaps/attach.png \
 		MOO_KEEP_ON_TOP_ICON $(moo_srcdir)/mooutils/pixmaps/keepontop.png \
-		MEDIT_ICON $(moo_srcdir)/mooutils/pixmaps/qk.png \
+		QK_ICON $(moo_srcdir)/mooutils/pixmaps/qk.png \
 			> $@.tmp && mv $@.tmp $@
 
 EXTRA_DIST += mooutils/pixmaps/symlink.png mooutils/pixmaps/symlink-small.png
