Fix a file name in doc/Makefile.am: medit.1 -> qk.1

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -103,7 +103,7 @@ doc:						\
 	$(srcdir)/help/help.html		\
 	$(srcdir)/help/script/index.html	\
 	$(srcdir)/help/medit.css		\
-	$(srcdir)/built/medit.1			\
+	$(srcdir)/built/qk.1			\
 	$(dest_png_files)			\
 	moo-help-sections.h.stamp
 
