--- a/doc/medit-defines.ent.in
+++ b/doc/medit-defines.ent.in
@@ -1,6 +1,6 @@
 <!-- -%- lang:none -%- -->
-<!ENTITY medit "<application>medit</application>">
+<!ENTITY medit "<application>Quark</application>">
 <!ENTITY medit-version "@MOO_DISPLAY_VERSION@">
-<!ENTITY medit-user-data-dir-unix "<filename>$HOME/.local/share/medit-1/</filename>">
-<!ENTITY medit-prefs-xml-unix "<filename>$HOME/.local/share/medit-1/prefs.xml</filename>">
-<!ENTITY medit-user-tools-dir-unix "<filename>$HOME/.local/share/medit-1/tools/</filename>">
+<!ENTITY medit-user-data-dir-unix "<filename>$HOME/.local/share/qk-1/</filename>">
+<!ENTITY medit-prefs-xml-unix "<filename>$HOME/.local/share/qk-1/prefs.xml</filename>">
+<!ENTITY medit-user-tools-dir-unix "<filename>$HOME/.local/share/qk-1/tools/</filename>">
