--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,19 @@
 .dirstamp
 Makefile
 Makefile.in
-/depcomp
-/compile
+/build-aux
 /config.h
 /config.log
-/config.guess
-/config.sub
 /config.status
 /configure
 /libtool
 doc/help.stamp
-/install-sh
-/ltmain.sh
-test-driver
 m4/intltool.m4
 m4/libtool.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
-missing
 po-gsv/Makefile.in.in
 po/Makefile.in.in
 build/
