Update the copyright notice in the man page

--- a/doc/man-qk.t2t.in
+++ b/doc/man-qk.t2t.in
@@ -95,5 +95,5 @@ to open a file (e.g. for inverse DVI search).
 
 = AUTHOR =
 
-Written and maintained by Yevgen Muntyan <@MOO_EMAIL@>
-
+Developed and maintained by Vadim Ushakov <@MOO_EMAIL@>
+Originally written by Yevgen Muntyan <emuntyan@users.sourceforge.net>
