Add more files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,15 @@ aclocal.m4
 *.pyc
 *.gmo
 *.o
+*.stamp
+*-gxml.h
 .goutputstream-*
 po*/dist
 po*/pot
 po/notexist
 po/missing
+po/.intltool-merge-cache
+po/.intltool-merge-cache.lock
 config.h.in
 plat/win32/gtk-win/tarballs/
 plat/win32/gtk-win/debug/
@@ -42,10 +46,13 @@ plat/win32/gtk-win/bdist-release/
 api/moo.xml
 api/gtk.xml
 moo/plugins/usertools/old/
+moo/mooapp-credits.h
 moo/moopython/pygtk/moo-generated.defs
 moo/moopython/plugins/old/
 moo/moolua/moo-lua-api.cpp
 moo/moolua/gtk-lua-api.cpp
+moo/medit-app/qk.desktop
+moo/qk
 doc/help/
 doc/built/
 po-gsv/po-original/
